[package]
name = "concurrent_binary"
version = "0.1.0"
edition = "2021"

[dependencies]
sled = "0.34"
blake3 = "1.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
rand = "0.8"

[dev-dependencies]
tempfile = "3.2"
futures = "0.3"

